# fin-esp-rs

./: .gitignore  README.md
fin-esp-rs/: .env.example  Cargo.toml  build.rs  flash.sh  partitions.csv  sand_viz.py  sdkconfig.defaults
fin-esp-rs/.cargo/: config.toml
fin-esp-rs/src/: api.rs  cache.rs  cgram.rs  chart.rs  config.rs  fmt.rs  glyphs.rs  history.rs  lcd.rs  main.rs  ota.rs  persist.rs  sand.rs  screen.rs  ticker.rs
fin-esp-rs/src/tuya/: crypto.rs  mod.rs  protocol.rs  session.rs
laptop/: mic-key.service  mic_key_daemon.py  mic_toggle.sh  play-pause.service  play_pause_server.py
tools/: esp_lamp_toggle.sh  glyph_editor.html  image_to_5x8_grid.py  lcd_glyph_visualize.py  png_to_lcd_glyphs.py
